classDiagram
    class Config {
        -config: Object
        -initialized: boolean
        +init()
        +get(path)
        +set(path, value)
        +validateConfig()
    }

    class MemoryManager {
        -memStore: MemoryStore
        -llmHandler: LLMHandler
        -embeddingHandler: EmbeddingHandler
        -contextManager: ContextManager
        +addInteraction()
        +retrieveRelevantInteractions()
        +generateResponse()
    }

    class ContextManager {
        -contextBuffer: Array
        -windowManager: ContextWindowManager
        +addToContext()
        +buildContext()
        +pruneContext()
    }

    class ContextWindowManager {
        -minWindowSize: number
        -maxWindowSize: number
        +estimateTokens()
        +createWindows()
        +mergeOverlappingContent()
    }

    class PromptTemplates {
        -templates: Object
        +formatChatPrompt()
        +formatCompletionPrompt()
        +formatConceptPrompt()
    }

    MemoryManager --> Config
    MemoryManager --> ContextManager
    ContextManager --> ContextWindowManager
    MemoryManager --> PromptTemplates